# syswatch

./: Cargo.toml  LAUNCH_DRAFT.md  README.md  demo.tape
Formula/: syswatch.rb
src/: app.rs  main.rs
src/collect/: collector.rs  gpu.rs  macos_sampler.rs  mod.rs  model.rs  power.rs  proc_bandwidth.rs  ring.rs  services.rs
src/tabs/: cpu.rs  disks.rs  fs.rs  gpu.rs  insights.rs  memory.rs  mod.rs  net.rs  overview.rs  placeholder.rs  power.rs  procs.rs  services.rs  timeline.rs
src/ui/: chrome.rs  graph.rs  mod.rs  palette.rs  theme.rs  widgets.rs
