[package]
name = "syswatch"
version = "0.1.0"
edition = "2021"
description = "Single-host, read-only system diagnostics TUI. Sibling to netwatch."
license = "MIT"
repository = "https://github.com/matthart1983/syswatch"
readme = "README.md"
keywords = ["system", "monitoring", "tui", "diagnostics", "observability"]
categories = ["command-line-utilities"]

[[bin]]
name = "syswatch"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
sysinfo = "0.32"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt", "macros", "time", "sync"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }

# Reuse netwatch-sdk for memory/loadavg/disk/interface collection so syswatch
# and netwatch-agent share a single source of truth for those parsers.
netwatch-sdk = { path = "../../netwatch-sdk" }

[features]
default = []
gpu-nvidia = []
smart = []

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
